Frontend + Backend Done

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taskly</title>
+    <meta name="application-name" content="Taskzy" />
+    <meta name="description" content="Manage your tasks easily with Taskzy - A modern task management application" />
+    <meta name="theme-color" content="#4A90E2" />
+    <meta name="msapplication-TileColor" content="#4A90E2" />
+    <title>Taskzy - Manage Your Tasks Easily</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/task-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/task-32x32.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/task-128x128.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/task-512x512.png" />
+    <link rel="shortcut icon" href="/task-32x32.png" />
   </head>
   <body>
     <div id="root"></div>
